--- a/src/app/component/add-tech-info/add-tech-info.component.html
+++ b/src/app/component/add-tech-info/add-tech-info.component.html
@@ -5,41 +5,51 @@
       <h2>Add Technology Info</h2>
       <form [formGroup]="techForm" (ngSubmit)="submitTechnologyForm(techForm.value)">
         <div class="form-group">
-          <label for="blog">Blog Name</label>
-          <input type="text" class="form-control" [(ngModel)]="blogName" placeholder="Enter Blog Name" id="blog" formControlName="blog">
-          <div *ngIf="techForm.controls['blog'].errors">
-            <div *ngIf="techForm.controls['blog'].touched && techForm.controls['blog'].invalid">
+          <label for="tech">Technology</label>
+          <input type="text" class="form-control" [(ngModel)]="technology" [class.duplicate-error]="hasError" placeholder="Enter Technology" id="tech" #tech formControlName="technology" (keyup)="checkTechDuplicate(tech.value)">
+          <div *ngIf="match">
+            <div class="alert alert-warning mt-1">
+              <strong class="pr-2" *ngFor="let blogObj of match">{{blogObj}}</strong> Technology(s) already in DB.
+            </div>
+          </div>
+          <div *ngIf="isTechExist">
+            <div class="alert alert-danger">
+              "{{tech.value}}" already available
+            </div>
+          </div>
+          <div *ngIf="techForm.controls['technology'].errors">
+            <div *ngIf="techForm.controls['technology'].touched && techForm.controls['technology'].invalid">
               <p class="text-danger">
-                <b>Blog name required</b>
+                <b>Technology required</b>
               </p>
             </div>
           </div>
         </div>  
 
         <div class="form-group">
-          <label for="shortNote">Short Note on {{blogName}}</label>
-          <textarea rows="4" class="form-control" formControlName="shortNote" placeholder="Short Note on {{blogName}} "></textarea>
+          <label for="shortNote">Short Note on {{technology}}</label>
+          <textarea rows="4" class="form-control" formControlName="shortNote" placeholder="Short Note on {{technology}} "></textarea>
           <div *ngIf="techForm.controls['shortNote'].errors">
             <div *ngIf="techForm.controls['shortNote'].touched && techForm.controls['shortNote'].invalid">
               <p class="text-danger">
-                <b>Write Short Note on {{blogName}}</b>
+                <b>Write Short Note on {{technology}}</b>
               </p>
             </div>
           </div>
         </div>
 
         <div class="form-group">
-          <label for="blogIcon">Select blogIcon</label>
+          <label for="techIconName">Select Technology Icon</label>
           <div class="row">
             <div class="col-8">
-              <img class="card-img w-25 cursor" (click)="blogIconFile.click()" [src]="cardUrl" alt="Add Image">
-              <input type="file" id="blogIcon" #blogIconFile formControlName="blogIcon" (change)="onFileChange($event)">
+              <img class="card-img w-25 cursor" (click)="techIconFile.click()" [src]="cardUrl" alt="Add Image">
+              <input type="file" id="techIconName" #techIconFile formControlName="techIconName" (change)="onFileChange($event)">
             </div>
             <div class="col-4"></div>
           </div>
-          <div *ngIf="techForm.controls['blogIcon'].errors">
-            <div *ngIf="techForm.controls['blogIcon'].touched && techForm.controls['blogIcon'].invalid">
-              <p class="text-danger">Icon Required for Blog</p>
+          <div *ngIf="techForm.controls['techIconName'].errors">
+            <div *ngIf="techForm.controls['techIconName'].touched && techForm.controls['techIconName'].invalid">
+              <p class="text-danger">Icon Required for Technology</p>
             </div>
           </div>
           <div class="progress mt-3" style="height: 15px" *ngIf="showProgress">
@@ -87,7 +97,7 @@
             <div class="small-4 medium-4 large-4 columns text-center">
               <i class="fa fa-check-circle fa-3x fa-clr-success"></i>
             </div>
-            <h3 class="text-success text-center">{{blogName}} Technology Info Successfully submitted</h3>
+            <h3 class="text-success text-center">{{technology}} Technology Info Successfully submitted</h3>
             <div class="text-info text-center">
               <ul class="list-inline">
                 <li>
